<?xml version="1.0"?>
<package format="2">
    <name>samsung_event_msgs</name>
    <version>0.0.0</version>
    <description>Samsung event-based camera message package</description>

    <maintainer email="amitrokh@umd.edu">Anton Mitrokhin</maintainer>
    <author email="amitrokh@umd.edu">Anton Mitrokhin</author>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>

</package>
